fixed issue with menu button visibility

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ header {
   overflow: hidden;
   padding: 3px 0;
   width: 100%;
-  z-index: 9999; }
+  z-index: 99; }
 
 .ms-brand a {
   color: #fff; }
@@ -46,13 +46,16 @@ header {
   height: 40px;
   position: absolute;
   left: 10px;
+  top: 10px;
   cursor: pointer;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  z-index: 999; }
   .ms-menu__btn span {
     width: 20px;
     height: 3px;
     background: #fff;
-    position: relative; }
+    position: relative;
+    z-index: 999; }
   .ms-menu__btn span::before, .ms-menu__btn span::after {
     position: absolute;
     content: "";
@@ -106,7 +109,10 @@ header {
     display: flex; }
 
   .ms-navigation {
-    transform: translate(-100%); } }
+    transform: translate(-100%); }
+
+  .ms-header {
+    position: fixed; } }
 .ms-brand {
   margin: 0; }
 
@@ -146,7 +152,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px; }
+  padding-top: 20px; }
 
 .ms-home__image {
   width: 200px;
@@ -161,17 +167,20 @@ header {
 @media screen and (max-width: 1000px) {
   .ms-container {
     margin: 0;
-    transition: 0.4s ease-in-out; } }
+    transition: 0.4s ease-in-out; }
+
+  .ms-home {
+    padding-top: 100px; } }
 /*About section*/
 .ms-about,
 .ms-skills,
 .ms-projects,
 .ms-contact {
-  padding-top: 60px;
-  position: relative; }
+  position: relative;
+  margin: 0; }
 
 .ms-skills__heading {
-  margin-bottom: 20px; }
+  margin-bottom: 10px; }
 
 .ms-skill__container {
   display: flex;
