--- a/scss/components/_layout.scss
+++ b/scss/components/_layout.scss
@@ -9,8 +9,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
-  // width: 100%;
+  padding-top: 20px;
 }
 
 .ms-home__image {
@@ -30,6 +29,9 @@
     margin: 0;
     transition: 0.4s ease-in-out;
   }
+  .ms-home{
+    padding-top: 100px;
+  }
 }
 
 /*About section*/
@@ -37,12 +39,13 @@
 .ms-skills,
 .ms-projects,
 .ms-contact {
-  padding-top: 60px;
+  // padding-top: 60px;
   position: relative;
+  margin: 0;
 }
 
 .ms-skills__heading {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 
 .ms-skill__container {
